<resources>
    <string name="app_name">447bpm</string>
    <string name="app_label">447bpm</string>

    <string name="bpm_api_base_url">http://185.224.139.218:8080</string>
    <string name="bpm_api_data_name">data</string>

    <string name="bpm_api_auth_resource_name">auth</string>
    <string name="bpm_api_auth_username_field">username</string>
    <string name="bpm_api_auth_password_field">password</string>
    <string name="bpm_api_auth_refresh_action_name">refresh</string>
    <string name="bpm_api_auth_logout_action_name">logout</string>

    <string name="bpm_api_songs_resource_name">songs</string>
    <string name="bpm_api_songs_external_resource_name">external</string>
    <string name="bpm_api_songs_external_source_parameter_name">source</string>
    <string name="bpm_api_songs_external_query_parameter_name">query</string>
    <string name="search_hint">Search song, artist</string>
    <string name="error_occurred_label">Error Occurred: </string>

    <string name="add_button_label">Add</string>
    <string name="no_results">No results</string>
    <string name="settings">Settings</string>
    <string name="welcome_title">Wech!!</string>
    <string name="username">Identifier</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="logout">Logout</string>
    <string name="bpm_api_auth_bearer_format">Bearer %s</string>
    <string name="bpm_api_songs_external_source_myfreemp_value">myfreemp3</string>
    <string name="bpm_api_songs_external_download_url">url</string>
    <string name="bpm_api_auth_refresh_refresh_field">refresh</string>
    <string name="bpm_api_songs_external_download_title">title</string>
    <string name="bpm_api_songs_external_download_artist">artist</string>
    <string name="bpm_api_songs_external_download_date">date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="library_song_sync_button_label">Sync</string>
    <string name="rating_content_description">Rating</string>
    <string name="bpm_api_songs_external_download_duration">duration</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="added_on">Added on</string>
    <string name="released_on">Released on</string>
    <string name="language">Language</string>
    <string name="duration">Duration</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="filename">Filename</string>
</resources>